--- a/Portfolio-rebuild/mainPage/Resume/resume.css
+++ b/Portfolio-rebuild/mainPage/Resume/resume.css
@@ -86,3 +86,25 @@ p{
     height: 25%;
     border-radius: 2%;
 }
+
+@media(max-width:1199px){
+    body{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .sidePage{
+        display: flex;
+        flex-direction: row;
+        margin-left: 70px;
+    }
+    .bottom{
+        height: 259px;
+        margin-left: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: left;
+    }
+        
+}
