--- a/Portfolio-rebuild/mainPage/Resume/resume.css
+++ b/Portfolio-rebuild/mainPage/Resume/resume.css
@@ -96,15 +96,27 @@ p{
     }
     .sidePage{
         display: flex;
-        flex-direction: row;
-        margin-left: 70px;
+        margin-top: 20px;
+        justify-content: center;
+        align-items: center;
+      
     }
     .bottom{
-        height: 259px;
-        margin-left: 10px;
-        display: flex;
-        flex-direction: column;
-        align-items: left;
+        transform: rotate(90deg);
+        overflow: scroll;
+        margin-left: 241px;
+    }
+    .top{
+        transform: rotate(90deg);
+        overflow: scroll;
+        margin-left: 241px;
+    }
+    .rotate{
+        transform: rotate(-90deg);
+    }
+    .smallerText{
+       height:15px;;
+       transform: rotate(-90deg);
     }
         
 }
