--- a/Portfolio-rebuild/Projects/Charged/Article-page/article-page.css
+++ b/Portfolio-rebuild/Projects/Charged/Article-page/article-page.css
@@ -90,3 +90,8 @@ section:hover p{
   0%{margin-bottom: 2000px;}
   100%{margin-bottom: 0px;}
 }
+@media(max-width:850px){
+  img{
+    width: 80%;
+  }
+}
